--- a/faltas/docker-compose.yml
+++ b/faltas/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     ports:
       - "8080:80"  # Mapea el puerto 8080 del host al puerto 80 del contenedor
     volumes:
-      - ./src/HTML:/var/www/html/  # Monta la carpeta src dentro del contenedor
+      - ./src/programa:/var/www/html/  # Monta la carpeta src dentro del contenedor
