--- a/examen/src/docker-compose.yml
+++ b/examen/src/docker-compose.yml
@@ -1,8 +1,23 @@
-version: "3.8"
 services:
   php-app:
     build: .
     ports:
-      - "8080:80"  # Mapea el puerto 8080 del host al puerto 80 del contenedor
+      - "8080:80"
+    depends_on:
+      - db
     volumes:
-      - ./src:/var/www/html/  # Monta la carpeta src dentro del contenedor
+      - ./2aEval:/var/www/html
+
+  db:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_DATABASE: examen
+    ports:
+      - "3308:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
